Wrote some more

--- a/conclusion.Rmd
+++ b/conclusion.Rmd
@@ -6,4 +6,4 @@ This perspective challenges the presently dominant approach in data visualizatio
 
 Further, I also tested and refined many of the ideas surrounding the model by developing an original interactive data visualization library for R: `plotscaper`. Beyond theory testing, `plotscaper` was developed to provide a practical tool for data exploration, a goal which appears to have been achieved with moderate success, as evidence by the package's download statistics in the relatively short time interval since its initial release. Developed largely from scratch and with minimal dependencies, the creation of the `plotscaper` necessitated the resolution of numerous fundamental programming issues and architectural concerns. Many of these challenges and their solutions are also documented throughout this thesis, with the goal of providing directions for potential future research and development.
 
-In conclusion, I find the algebraic structure of data visualizations and its relationship to interactivity to be a fascinating topic. I consider myself lucky to have stumbled upon few intriguing ideas that allowed me to see graphics in an entirely new light. Yet, I recognize that the model presented in this thesis is far from exhaustive, and significant opportunities remain for future research. Since the model is built on some simple, foundational concepts from category theory, it is natural to assume that category theory may yield many further, much deeper insights regarding the nature of the relationships between graphics, statistics, and interaction. Nevertheless, I hope it is clear that even these simple ideas provide a powerful tool for reasoning about graphics and even possess a significant applied utility. Ultimately, developing truly generic and robust interactive data visualization systems may require grappling with these ideas further.
+In conclusion, I find the algebraic structure of data visualizations and its relationship to interactivity to be a fascinating topic. I consider myself lucky to have stumbled upon a few intriguing ideas that allowed me to see graphics in an entirely new light. Yet, I recognize that the model presented in this thesis is far from exhaustive, and significant opportunities remain for future research. Since the model is built on some simple, foundational concepts from category theory, it is natural to assume that category theory may yield many further, much deeper insights regarding the nature of the relationships between graphics, statistics, and interaction. Nevertheless, I hope it is clear that even these simple ideas provide a powerful tool for reasoning about graphics and even possess a significant applied utility. Ultimately, developing truly generic and robust interactive data visualization systems may require grappling with these ideas further.
